# server/models/branchModle.js
@@ -1,0 +1,28 @@
+const mongoose = require("mongoose");
+const branchSchema = new mongoose.Schema(
+  {
+    user_id: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "user",
+      required: true,
+      unique: true,
+    },
+    address: {
+      type: String,
+      require: true,
+      unique: true,
+    },
+    phone: {
+      type: String,
+      require: true,
+      unique: true,
+    },
+    logo: {
+      type: String,
+      default: null,
+    },
+  },
+  { timestamps: true }
+);
+
+module.exports = mongoose.model("Branch", branchSchema);
